 - Fixed horrible bug restarting the current book, from Settings or after a dead: The Kai Monastery objects were lost
 - Upgrade of books 1, 3, 4 and 6 to the latest version (erratas). Books 2 and 5 currently cannot be upgraded
 - Fixed bug with tinderbox on book4 / sect270
 - Fixed bug with meals: If the meal object has some effect, apply that effect when the object is eaten
 - Objects now can have a short / long description
 - Fixed bug with map zoom when device orientation is changed (wrong zoom)
 - Changed rendering of definitions lists (hard to read on small devices)
 - Fixed  bugs with the Crystal Star Pendant ("If you have **ever** been given a Crystal Star Pendant", not if you have it NOW)
 - Book 5, sect20: Fixed bug, stop combat after turn 3
 - Book 5, sect330: Fixed bug, stop combat after turn 2
 - Added privacy policy
 - New option on Action Chart to fight unarmed (can be useful on book 12)
 - Show message when current weapon is changed
 - Book 1, sect88: Spear is capitalized, thus you should be able to take and equip it as a normal weapon
 - Book 2, sect290: According to the text, you need to eat a meal from your backpack in this section
 - Book 5, sect166: You cannot use a Shield when afflicted by Limbdeath
 - Book 5, sect239: Wrong Random Table bonuses
 - Settings: Added option to start a new game

1.11.1
 - Android 4.X is no longer supported. Min. Android version is now 5.0
 - Fixed bug on book 6 / sect284: If you lost all your money, you could not go to sect76
 - Fixed bug picking map on book 6 if you had 12 or more Special Items
 - Better explanation for export / import / save / load games
 - Fixed bug trying to export saved games if there was none
 - Fixed bug on book 10 / Equipment: Missed Potion of Alether
 - Book 5: Do not show +2 CS on stats if you cannot use Shield by Limbdeath. Thanks Julian!
 - Support for Extended Combat Results Table (LW club newsletter 29). Thanks Julian!
 - Explain basics of game mechanics in first played book