@@ -45,6 +45,12 @@
     <a href="https://www.projectaon.org/en/Main/FireOnTheWater">other tools and adaptations to play the books</a>.
 </p>
 
+<h3>I cannot write on Action Chart</h3>
+<p>
+    This application is an adaptation of the game books, and you will not need to write by hand on the Action Chart 
+    (except on the "Annotations" field). The application tries to do all the game accounting.
+</p>
+
 <h3>I have found a bug</h3>
 <p>
     You can report bugs on these places:
