@@ -47,6 +47,12 @@
     <a href="https://www.projectaon.org/en/Main/FireOnTheWater">otras adaptaciones y herramientas para jugar a los libros</a>. 
 </p>
 
+<h3>No puedo escribir en la Carta de Acción</h3>
+<p>
+    Esta aplicación es una adaptación de los librojuegos, y no necesitarás escribir nada en la Carta de Acción 
+    (excepto en el campo de "Anotaciones"). La aplicación intenta hacer toda la contabilidad del juego.
+</p>
+
 <h3>He encontrado un fallo</h3>
 <p>
     Puedes informarnos de los fallos en los siguientes sitios:
