@@ -370,6 +370,10 @@
             application tries to do all the game accounting.
         </p>
         <p>
+            On the Action Chart there are functions to check your stats and to handle your inventory (use or drop 
+            objects, change current weapon, ...).
+        </p>
+        <p>
             Each time you see a blue bold text like this "<a class="random action">Some text</a>" into the book text, 
             it's an action. Usually this action will be get a number from the Random Number Table. 
             Click on it to do that action.
