@@ -84,3 +84,5 @@
  - Book 5: Do not show +2 CS on stats if you cannot use Shield by Limbdeath. Thanks Julian!
  - Support for Extended Combat Results Table (LW club newsletter 29). Thanks Julian!
  - Explain basics of game mechanics in first played book
+ - FAQ: "I cannot write in the Action Chart"
+ 
